[package]
name = "hello-rocket"
version = "0.1.0"
authors = ["root"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.4.6"
rocket_upload = "0.1.0"
rocket-multipart-form-data = "0.9.6"
rocket_contrib = "0.4.6"

